# LinAlgBench

./: .env.example  .gitignore  AppendixF_Agreement.md  LICENSE  README.md  linalg_app.py  pyproject.toml  requirements.txt
data/: linalg_bench_3x3.csv  linalg_bench_4x4.csv  linalg_bench_5x5.csv
generate/: generate.py
judge_prompts/: __init__.py  det.py  eigen.py  matrix_power.py  matrix_vector.py  multiplication.py  nullity.py  rank.py  taxonomy_reference_card.py  trace.py  transpose.py
pipeline/: build_judge.py  format_eval.py  format_inference.py  inference.py  inference_llm.py  judge_llm.py  models.py  subcat_config.py  summarize.py  validate_judge.py
