[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "linalgbench"
version = "1.0.0"
description = "LinAlg-Bench: Evaluating LLM Reasoning on Linear Algebra"
authors = [
    {name = "LinAlg-Bench Authors"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=2.0",
    "google-genai>=1.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "tqdm>=4.60",
    "python-dotenv>=1.0",
    "streamlit>=1.30",
]

[project.urls]
Source = "https://github.com/linalgbench2026/LinAlgBench"

[tool.setuptools.packages.find]
include = ["pipeline*", "judge_prompts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
